更新的慢慢卖

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>慢慢卖比价网--手机版</title>
 </head>
 <body>
+	<a href="./category-brankAll/index.html" style="width: 20px;height:20px;background-color: red;display: block;"></a>
 	<p>这是测试上传</p>
 </body>
 </html>
