--- a/category-brankAll/index.html
+++ b/category-brankAll/index.html
@@ -36,7 +36,7 @@
 	<div class="rank-list" ng-repeat="item in data.result">
 		<ul>
 			<li>
-				<a href="#" ng-bind="item.brandTitle" id="{{item.brandTitleId}}"></a>
+				<a href="#" ng-bind="item.brandTitle">{{item.brandTitle}}</a>
 				<span></span>
 			</li>
 		</ul>
